# bkc32

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  server.py
arduino/bkc32/: bkc32.ino
documents/: notes_first_meeting.txt
documents/deliveries/frame/: connection_diagram.tex
documents/deliveries/phase.1/: fase1_requerimientos.tex
documents/deliveries/phase.2/: fase2_comunicacion.tex
documents/deliveries/phase.3/: fase3_adquisicion_visualizacion.tex
documents/deliveries/phase.4/: fase4_registro_exportacion.tex
documents/deliveries/phase.5/: fase5_cronograma.tex  fase5_manual_usuario.tex  fase5_reporte_tecnico_manual_memoria.tex
documents/template/: estilo_unir-1.sty  plantilla_modelo-problema.tex
src/: classifier.py  collector.py  coordinator.py  settings.py  sim_board.py  utls.py
webapp/: GUIA_UI.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
webapp/scripts/: capture_phase5.mjs  capture_screenshots.mjs
webapp/src/: App.tsx  index.css
